Sat Jul  3 00:26:55 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htcommon/DocumentRef.cc (Clear): Change default value of
	docHopCount to 0 to fix several hopcount bugs.

	* htdig/Transport.h, htdig/Transport.cc: Changes to support URL
	referers as well as authentication credentials.

	* htdig/HtHTTP.h, htdig/HtHTTP.cc(SetCredentials): Implement HTTP
	Basic Authentication credentials.
	(SetRequestCommand): Use Referer and Authentication headers if
	supplied.

Sun Jun 30 11:26:00 1999  Gabriele Bartolini <g.bartol@comune.prato.it>

	* htdig/Transport.h: Inserted the methods declarations regarding
	the connection management. The code has been moved out from the
	HtHTTP.h code. Also moved here the static variable 'debug'.

	* htdig/Transport.cc: Definition of the connection management code.
	The code has been moved out from the HtHTTP.cc code.

	* htdig/HtHTTP.h: Eliminated the connection management code and the
	static variable 'debug'. Inserted the 'modification_time_is_now' as
	a static variable, in order to respect the encapsulation principle.

	* htdig/HtHTTP.cc: Eliminated the connection management code and the
	static variable 'debug' initialization. Inserted the
	'modification_time_is_now' initialization.

Sun Jun 27 16:29:49 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/HTML.h: Cleanup.

	* htcommon/defaults.cc: Added default for img_alt_factor for text
	weighting on <IMG ALT="..." tags.

	* htdig/Retriever.cc: Add slot for img_alt_factor.

	* htdig/HTML.cc (do_tag): Rewrite using Configuration class to
	separate tag attributes.
	(parse): Ignore final '>' in string passed to do_tag.
	(do_tag): Index IMG ALT text.

Fri Jun 25 17:58:44 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/Transport.h: Fix virtual methods for Transport_Response to
	have defaults.

	* htdig/HtHTTP.h: Fix class declaration of HtHTTP class to prevent
	syntax error. Pointed out by Gabriele.
